# aa-animator

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  qa.yml  showcase.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: architecture.md  legal-notes.md  license-map.md  poc-validation.md  publish-checklist.md  withdrawal-gate.md
scripts/: poc_multi_image_results.json  poc_results.json  poc_v0_0_3.py  run_style_e_test.py  run_style_f_test.py  run_style_g_test.py  run_style_ij_boo_test.py  run_v02_comparison.py  v0_1_validation_results.json  validate_v0_1.py
src/aa_animator_v2/: __init__.py  _boo_postprocess.py  _version.py  cli.py  dither.py  metrics_v02.py  parallax.py  pipeline.py  renderer.py  smoothing.py  style_a_gallery.py  style_b_boo_inspired.py  style_c_dog_shape.py  style_d_all.py  style_e_signal.py  style_f_lighting.py  style_g_3d_lighting.py  style_h_bird.py  style_i_long_boo.py  style_j_slime_boo.py
src/aa_animator_v2/pipeline/: __init__.py  _animator.py  _depth.py  _encoding.py  _rendering.py  _segmentation.py
tests/: test_boo_postprocess.py  test_cli_e2e.py  test_dither.py  test_parallax.py  test_pipeline.py  test_renderer.py  test_smoothing.py  test_style_e_signal.py  test_style_f_lighting.py  test_style_g_3d_lighting.py  test_style_h_bird.py  test_style_i_long_boo.py  test_style_j_slime_boo.py  test_version.py
