[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "aa-animator"
version = "0.0.1"
description = "Still image → subject-only animated ASCII art video. Depth-parallax warp + Ghostty-grade rendering."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Hinano Hart", email = "hinanohart@gmail.com" }]
keywords = [
  "ascii-art",
  "animation",
  "ascii-animation",
  "depth-estimation",
  "parallax",
  "ghostty",
  "terminal",
  "image-to-video",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Video",
  "Topic :: Terminals",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "pillow>=10.0",
  "opencv-python-headless>=4.8",
  "scipy>=1.11",
  "torch>=2.1",
  "transformers>=4.40",
  "huggingface-hub>=0.24",
  "tqdm",
]

[project.optional-dependencies]
matte = [
  "rembg>=2.0",
  # v0.2+: BiRefNet, sam2 (added when stable extra packaging is confirmed)
]
i2v = [
  "diffusers>=0.27",
  "accelerate>=0.29",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
]

[project.scripts]
aa-animator = "aa_animator_v2.cli:main"

[project.urls]
Homepage = "https://github.com/hinanohart/aa-animator"
Documentation = "https://github.com/hinanohart/aa-animator#readme"
Issues = "https://github.com/hinanohart/aa-animator/issues"
Changelog = "https://github.com/hinanohart/aa-animator/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/aa_animator_v2"]

[tool.hatch.build.targets.sdist]
include = [
  "src/",
  "tests/",
  "docs/",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CHANGELOG.md",
  "SECURITY.md",
]
exclude = [
  "*.npy",
  "*.mp4",
  "*.gif",
  "tmp/",
  ".venv/",
  "venv/",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "PL", "RUF", "S", "SIM", "PIE"]
ignore = [
  "S101",    # asserts in tests
  "PLR0912", # branches in rendering code
  "PLR2004", # magic numbers in render constants
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
